Atualizar o index.html

--- a/exercicios/agrupamento de tags/index.html
+++ b/exercicios/agrupamento de tags/index.html
@@ -35,7 +35,7 @@
     </main>
     
     <footer>
-        <p>Em desenvovimento pela webdev.</p>
+        <p>Criado por rodrigguess-dev.</p>
     </footer>
 </body>
 </html>
