--- a/exercicios/agrupamento de tags/index.html
+++ b/exercicios/agrupamento de tags/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Agrupamento de tags</title>
+    <title>Estrutura de site simples</title>
 </head>
 <body>
-    <header>
+    <header id="cabeçalho">
         <h1>Meu site</h1>
-        <nav>
+        <nav id="Menu">
             <a href="#">Link 1</a>
             <a href="#">Link 2</a>
             <a href="#">Link 3</a>
@@ -18,20 +18,14 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h2>Título 1</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur, excepturi, assumenda facilis architecto sint eligendi obcaecati vel consequatur, rerum veniam vitae autem dolorem culpa voluptates qui! Repellat distinctio tenetur minus.</p>
-        </section>
+        <h2>Título 1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corrupti nemo quis sapiente vero, nisi placeat fugit optio sed, nostrum autem sit nihil, neque repellat tempora. Repudiandae molestiae itaque ratione.</p>
 
-        <section>
-            <article>
-                <h2>Título 2</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit laudantium corrupti officia temporibus enim sequi earum veritatis possimus, doloremque molestias! Amet similique eligendi quaerat nam repudiandae alias dignissimos, quam saepe.</p>
-                <aside>
-                    <p>Escrito por Lorem</p>
-                </aside>
-            </article>
-        </section>
+        <h2>Título 2</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis optio quaerat explicabo fugiat maiores rem, aliquid nam placeat! Doloremque molestias sunt soluta velit corporis nisi aperiam est ut accusamus error?</p> 
+
+        <h2>Título 3</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore dolorum asperiores consectetur officiis explicabo corrupti, quia esse ullam adipisci eos, et cum repellat eaque eum optio sequi velit voluptatem? Voluptatem?</p>
     </main>
     
     <footer>
