--- a/exercicios/agrupamento de tags/index.html
+++ b/exercicios/agrupamento de tags/index.html
@@ -7,16 +7,17 @@
     <title>Estrutura de site simples</title>
 </head>
 <body>
-    <header id="cabeçalho">
+    <header>
         <h1>Meu site</h1>
-        <nav id="Menu">
+    <nav>
             <a href="#">Link 1</a>
             <a href="#">Link 2</a>
             <a href="#">Link 3</a>
             <a href="#">Link 4</a>
             <a href="#">Link 5</a>
-        </nav>
+    </nav>
     </header>
+
     <main>
         <h2>Título 1</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corrupti nemo quis sapiente vero, nisi placeat fugit optio sed, nostrum autem sit nihil, neque repellat tempora. Repudiandae molestiae itaque ratione.</p>
