--- a/exercicios/agrupamento de tags/index.html
+++ b/exercicios/agrupamento de tags/index.html
@@ -7,8 +7,11 @@
     <title>Estrutura de site simples</title>
 </head>
 <body>
+    <!--cabeçalho-->
     <header>
         <h1>Meu site</h1>
+
+    <!--menu-->    
     <nav>
             <a href="#">Link 1</a>
             <a href="#">Link 2</a>
@@ -18,6 +21,7 @@
     </nav>
     </header>
 
+    <!--conteudo principal-->
     <main>
         <h2>Título 1</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corrupti nemo quis sapiente vero, nisi placeat fugit optio sed, nostrum autem sit nihil, neque repellat tempora. Repudiandae molestiae itaque ratione.</p>
@@ -29,6 +33,7 @@
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore dolorum asperiores consectetur officiis explicabo corrupti, quia esse ullam adipisci eos, et cum repellat eaque eum optio sequi velit voluptatem? Voluptatem?</p>
     </main>
     
+    <!--rodape-->
     <footer>
         <p>Criado por rodrigguess-dev.</p>
     </footer>
