--- a/imagem de fundo/imagens/index.html
+++ b/imagem de fundo/imagens/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site com imagem de fundo</title>
+
+    <style>
+        .quadrada {
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <div class="quadrada">
@@ -13,7 +19,7 @@
     <div class="quadrada">
 
     </div>
-    
+
     <div class="quadrada">
 
     </div>
