--- a/exercicios/imagem de fundo/index.html
+++ b/exercicios/imagem de fundo/index.html
@@ -8,7 +8,7 @@
     <style>
 
         body {
-            background-image: url(wallpaper002.jpg);
+            background-image: url(imagens/wallpaper002.jpg);
             backdrop-filter: cover;
         }
 
@@ -32,20 +32,22 @@
         #Q3 {
             background-image: url(pattern003.png);
         }
+
+        a {
+            display: block;
+            color: rgb(255, 255, 255);
+            text-align: right;
+        }
     </style>
 </head>
 <body>
-    <div class="quadrada" id="Q1">
+    <div class="quadrada" id="Q1"></div>
 
-    </div>
+    <div class="quadrada" id="Q2"></div>
 
-    <div class="quadrada" id="Q2">
+    <div class="quadrada" id="Q3"></div>
 
-    </div>
-
-    <div class="quadrada" id="Q3">
-
-    </div>
+    <a href="fundo-2.html" target="_self">Segunda página</a>
 
 </body>
 </html>
