--- a/exercicios/imagem de fundo/index.html
+++ b/exercicios/imagem de fundo/index.html
@@ -8,8 +8,11 @@
     <style>
 
         body {
+            height: 100vh;
             background-image: url(imagens/wallpaper002.jpg);
-            backdrop-filter: cover;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
         }
 
         .quadrada {
