--- a/exercicios/imagem de fundo/fundo-2.html
+++ b/exercicios/imagem de fundo/fundo-2.html
@@ -28,7 +28,14 @@
     #Q4 {
         background-position: center center;
     }
+
+    p > a {
+        display: block;
+        color: black;
+        text-align: right;
+    }
 </style>
+
 <body>
     <div class="bloco" id="Q1"></div>
 
@@ -37,5 +44,7 @@
     <div class="bloco" id="Q3"></div>
 
     <div class="bloco" id="Q4"></div>
+
+    <p><a href="fundo-3.html">Terceira página</a></p>
 </body>
 </html>
