Atualizar o index.html

--- a/exercicios/imagem dinamica/index.html
+++ b/exercicios/imagem dinamica/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Imagem dinâmica</h1>
-    <p>Tente abrir esse site em varios dispositivos diferentes ou simplismente aumente e diminua o tamanho do seu navegador.</p>
+    <p>Tente abrir esse site em varios dispositivos diferentes ou simplesmente aumente e diminua o tamanho do seu navegador.</p>
 
     <picture>
         <source media="(max-width: 750px)" srcset="img/img300.png" type="image/png">
