--- a/exercicios/projeto cordel/index.html
+++ b/exercicios/projeto cordel/index.html
@@ -6,6 +6,16 @@
     <title>Projeto cordel</title>
 </head>
 <body>
-    <h1>Cordel moderno</h1>
+    <header>
+
+    </header>
+
+    <main>]
+        <h1>Cordel moderno</h1>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
